Responsive sidebar more bugs on mobile

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -255,3 +255,9 @@ p {
   font-size: 1.5rem;
   opacity: 0.7;
 }
+.logo {
+  font-weight: bold;
+  color: var(--accent-clr);
+  font-size: 1.2rem;
+  margin-left: 3rem; 
+}
